Fix bug in routes, set z-index on top stripe lower than flash message

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -393,7 +393,7 @@ textarea {
   right: 0;
   min-height: 5px;
   background-color: #08c;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 /* Scroll Bar Styling
